Fix: #12029 Long CRS name overflows in dropdown selector in CRS selector plugin

--- a/web/client/themes/default/less/map-footer.less
+++ b/web/client/themes/default/less/map-footer.less
@@ -229,7 +229,7 @@
                 display: block;
                 cursor: pointer;
                 line-height: 1.25rem;
-                width: max-content;
+                max-width: 4.5rem;
                 padding-right: 4px;
             }
 
